# bevy-demo

./: Cargo.toml  README.md
assets/models/: Animal.glb
src/: animated_sprite.rs  camera.rs  camera3d.rs  debug_label.rs  main.rs  model_viewer.rs  morph_targets.rs  morph_viewer_plugin.rs  player.rs  player_controller.rs  scene_viewer.rs  vrm_gltf.rs
src/crates/skybox/: Cargo.toml
src/crates/skybox/src/: lib.rs
src/crates/skybox/src/shaders/: skybox.wgsl
