[package]
name = "bevy-demo"
version = "0.1.0"
authors = ["floppyhammer <tannhauser_chen@outlook.com>"]
edition = "2021"
rust-version = "1.65.0"

[dependencies]
bevy = "0.11.2"
#bevy-inspector-egui = "0.19.0"
rlip_sync = { git = "https://github.com/floppyhammer/rlip-sync.git" }
kira = "0.8.5"
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd.git", default-features = false, features = ["3d", "f64"] }
gltf = { git = "https://github.com/floppyhammer/gltf.git", branch = "third-party-extensions", default-features = false, features = ["names"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[patch.crates-io]
bevy = { path = "../bevy" }
