[package]
name = "bevy-demo"
version = "0.1.0"
authors = ["floppyhammer <tannhauser_chen@outlook.com>"]
edition = "2021"
rust-version = "1.65.0"

[dependencies]
bevy = "0.12.0"
#bevy-inspector-egui = "0.19.0"
rlip_sync = { git = "https://github.com/floppyhammer/rlip-sync.git" }
kira = "0.8.5"
bevy_xpbd_3d = { version = "0.3.1", default-features = false, features = ["3d", "f64"] }
gltf = { git = "https://github.com/floppyhammer/gltf.git", branch = "third-party-extensions", default-features = false, features = ["names"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[patch.crates-io]
#bevy = { path = "../bevy" }
